--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,14 @@
 _repo: Cliges--A-Romance_2414
-_version: 0.1.0
+_version: 0.2.0
 alternative_title: Cligés. English
 contributor:
   translator:
     agent_name: Gardiner, Laetitia Jane
     gutenberg_agent_id: '903'
     url: http://www.gutenberg.org/2009/agents/903
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Chrétien, de Troyes, active 12th century
@@ -17,6 +20,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/435
     wikipedia: http://en.wikipedia.org/wiki/Chr%C3%A9tien_de_Troyes
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2414#Cliges--A-Romance
 gutenberg_bookshelf: Fantasy
 gutenberg_issued: '2000-11-01'
 gutenberg_type: Text
